force-app/main/default/objects/DataAdmin__c/DataAdmin__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>To control Flow Execution</description>
    <label>Data Admin</label>
</CustomObject>