force-app/main/default/objects/DataAdmin__c/fields/EmailMessage_CaseStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage_CaseStatusUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMessage_CaseStatusUpdate</label>
    <type>Checkbox</type>
</CustomField>