force-app/main/default/objects/DataAdmin__c/fields/EmailMessage_EmailCarryoverForSupport__c.field-meta.xml
<CustomField>
    <fullName>EmailMessage_EmailCarryoverForSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMessage_EmailCarryoverForSupport</label>
    <type>Checkbox</type>
</CustomField>