force-app/main/default/objects/DataAdmin__c/fields/EmailMessageUpdateDateofLastContact__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageUpdateDateofLastContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMessage _UpdateDateofLastContact</label>
    <type>Checkbox</type>
</CustomField>